--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vm2": "^3.9.19"
   },
   "devDependencies": {
     "@types/node": "^20",
